--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Tentang Wasilah Sukses</h2>
+              <h2>Tentang wasilahsukses.github.io</h2>
               <br/>
                 <p>Adalah Landing-Page tentang PayTren. PayTren adalah produk digital berupa aplikasi Payment Gateway PT. Veritra Sentosa Internasional (TRENI) oleh Founder & Owner Ustadz Yusuf Mansur. Website resmi <a href="http://paytren.co.id">www.paytren.co.id</a> dan <a href="http://treni.co.id">www.treni.co.id</a>.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>Landing-Page <a href="http://wasilahsukses.github.io//">wasilahsukses.github.io</a> ini Author buat untuk memudahkan Anda menemukan informasi-informasi terkait PayTren hingga cara daftarnya.</p>
+                <p>Kunjungi juga WebPro Author di <a href="http://tn0111923.paytren.net//">tn0111923.paytren.net</a>.</p>
+                <p>Diharapkan <a href="http://wasilahsukses.github.io//">wasilahsukses.github.io</a> dapat menjadi wasilah kebermanfaatan bagi banyak orang terutama Author.</p>
                 <br/>
               </div>
         </div>
