--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,13 +3,11 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <br/><br/>
-              <h2>Tentang wasilahsukses.github.io</h2>
+              <h2>About</h2>
               <br/>
-                <p>Adalah Landing-Page tentang PayTren. PayTren adalah produk digital berupa aplikasi Payment Gateway PT. Veritra Sentosa Internasional (TRENI) oleh Founder & Owner Ustadz Yusuf Mansur. Website resmi <a href="http://paytren.co.id">www.paytren.co.id</a> dan <a href="http://treni.co.id">www.treni.co.id</a>.</p>
-                <p>Landing-Page <a href="http://wasilahsukses.github.io//">wasilahsukses.github.io</a> ini Author buat untuk memudahkan Anda menemukan informasi-informasi terkait PayTren hingga cara daftarnya.</p>
-                <p>Kunjungi juga WebPro Author di <a href="http://tn0111923.paytren.net//">tn0111923.paytren.net</a>.</p>
-                <p>Diharapkan <a href="http://wasilahsukses.github.io//">wasilahsukses.github.io</a> dapat menjadi wasilah kebermanfaatan bagi banyak orang terutama Author.</p>
+                <p>Salam kenal, Saya TRI AFRIZAL HILMI, untuk lebih akrab Anda bisa panggil Saya 'MAS HILMI'. Saya adalah seorang Digital Preneur PayTren. Sekilas tentang PayTren, adalah produk digital berupa aplikasi Payment Gateway PT. Veritra Sentosa Internasional (TRENI) oleh Founder & Owner Ustadz Yusuf Mansur. Website resmi <a href="http://paytren.co.id">www.paytren.co.id</a> dan <a href="http://treni.co.id">www.treni.co.id</a>.</p>
+                <p>Untuk mengetahui lebih dalam tentang PayTren Anda bisa mengunjungi WebPro Saya di <a href="http://tn0111923.paytren.net//">tn0111923.paytren.net</a> atau kunjungi web resmi PayTren diatas.</p>
                 <br/>
-              </div>
+             </div>
         </div>
     </section>
