--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,8 @@
               <h2>About</h2>
               <br/>
                 <p>Salam kenal, Saya TRI AFRIZAL HILMI, untuk lebih akrab Anda bisa panggil Saya 'MAS HILMI'. Saya adalah seorang Digital Preneur PayTren. Sekilas tentang PayTren, adalah produk digital berupa aplikasi Payment Gateway PT. Veritra Sentosa Internasional (TRENI) oleh Founder & Owner Ustadz Yusuf Mansur. Website resmi <a href="http://paytren.co.id">www.paytren.co.id</a> dan <a href="http://treni.co.id">www.treni.co.id</a>.</p>
-                <p>Untuk mengetahui lebih dalam tentang PayTren Anda bisa mengunjungi WebPro Saya di <a href="http://tn0111923.paytren.net//">tn0111923.paytren.net</a> atau kunjungi web resmi PayTren diatas.</p>
+                <p>Anda sudah tepat berada di Landing-Page ini untuk mendapatkan informasi-informasi yang Anda butuhkan mengenai penawaran sebelum memutuskan untuk daftar PayTren.</p> 
+                <p>Kunjungi juga WebPro Saya di <a href="http://tn0111923.paytren.net//">tn0111923.paytren.net</a> untuk mengetahui seputar berita update tentang PayTren.</p>
                 <br/>
              </div>
         </div>
