--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
               <h2>About</h2>
               <br/>
                 <p>Salam kenal, Saya TRI AFRIZAL HILMI, untuk lebih akrab Anda bisa panggil Saya 'MAS HILMI'. Saya adalah seorang Leader Digital Preneur PayTren. Sekilas tentang PayTren, adalah produk digital berupa aplikasi Payment Gateway PT. Veritra Sentosa Internasional (TRENI) oleh Founder & Owner Ustadz Yusuf Mansur. Website resmi <a href="http://paytren.co.id">www.paytren.co.id</a> dan <a href="http://treni.co.id">www.treni.co.id</a>.</p>
-                <p>Anda sudah tepat berada di Landing-Page ini untuk mendapatkan informasi-informasi yang Anda butuhkan mengenai PayTren sebelum memutuskan untuk daftar dan bergabung di komunitas.</p> 
+                <p>Anda sudah tepat berada di website ini untuk mendapatkan informasi-informasi yang Anda butuhkan mengenai PayTren sebelum memutuskan untuk daftar dan bergabung di komunitas.</p> 
                 <p>Kunjungi juga WebPro Saya di <a href="http://tn0111923.paytren.net//">tn0111923.paytren.net</a> untuk mengetahui seputar berita update tentang PayTren.</p>
                 <p>Salam Sukses Berjamaah.</p>
                 <br/>
